cmake_minimum_required(VERSION 3.31)
project(modern_tutor)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(hello)
add_subdirectory(unique_ptr)
add_subdirectory(euclid_gcd)
add_subdirectory(eratosthenes)
add_subdirectory(smart_pointer_exercise)
add_subdirectory(cyclic_ref)
add_subdirectory(game_engine_scene_graph)
add_subdirectory(linked_list)

